CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(9)

SET(CMAKE_CXX_STANDARD 14)

ADD_EXECUTABLE(9 main.cpp ../common/utils.h ../common/utils.cpp part-1.hpp rope.hpp direction.hpp puzzle.hpp action.hpp)
FILE(COPY example DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
IF (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/example-2)
    FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/example-2 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
ENDIF ()
IF (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/input)
    FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/input DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
ENDIF ()
IF (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/input-2)
    FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/input-2 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
ENDIF ()
